--- a/templates/bottling/bottlings.html
+++ b/templates/bottling/bottlings.html
@@ -7,13 +7,17 @@
         {% include "bottling/add_bottling.html" %}
     </div>
     <div class="col-md-7 p-4">
-        <h4>Lista de Embotellados</h4>
+        <h4 class="fst-italic">Lista de Embotellados</h4>
         <table class="table table-bordered table-hover">
-            <thead class="table-dark">
+            <thead class="table-info fst-italic">
                 <tr>
-                    <th>fecha</th>
-                    <th>Código</th>
-                    <th>ID Crianza</th>
+                    <th>fecha de embotellado</th>
+                    <th>Volumen</th>
+                    <th>Tipo de botella</th>
+                    <th>Cantidad total</th>
+                    <th>Lote</th>
+                    <th>Observacion</th>
+                    <th>Crianza ID</th>
                     <th>Acciones</th>
                 </tr>
             </thead>
@@ -21,11 +25,15 @@
                 {% for b in bottling %}
                 <tr>
                     <td>{{ b.date_bottling}}</td>
-                    <td>{{ b.bottling_code }}</td>
-                    <td>{{ b.aging_id }}</td>
+                    <td>{{ b.total_volume }}</td>
+                    <td>{{ b.bottle_type}}</td>
+                    <td>{{b.bottle_quantity}}</td>
+                    <td>{{b.lot_number}}</td>
+                    <td>{{b.observation}}</td>
+                    <td>{{b.aging_id}}</td>
                     <td>
                         <a href="{{ url_for('bottling_bp.edit_bottling', id=b.id) }}" 
-                        class="btn btn-sm btn-primary">Editar</a>
+                        class="btn btn-sm btn-warning">Editar</a>
                         <form action="{{ url_for('bottling_bp.delete_bottling', id=b.id)}}" method="Post" style="display:inline-block;" onsubmit="return confirm('¿Seguro que queres eliminar este embotellado?')">
                             <button type="submit" class="btn btn-sm btn-danger">Eliminar</button>
                         </form>
