--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,13 +16,12 @@
                         <button type="button"
                         class="btn-close" 
                         data-bs-dismiss="alert"
-                        aria-label="Cerrar">
-                        </button>
+                        aria-label="Cerrar"></button>
                     </div>
                 {% endfor %}
             {% endif %}
         {% endwith %}
         {% block body %}{% endblock %}
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script"
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
