--- a/templates/bottling/edit_bottling.html
+++ b/templates/bottling/edit_bottling.html
@@ -15,7 +15,12 @@
         </div>
         <div class="mb-3 fst-italic">
             <label for="bottle_type" class="form-label">Tipo de bottella</label>
-            <input type="number" min="0" name="bottle_type" class="form-control" value="{{bottling.bottle_type}}">
+            <select class="form-control" name="bottle_type">
+                <option value="vidrio">Vidrio</option>
+                <option value="plastico">Plastico</option>
+            </select>
+            <label for="capacity_ml" class="form-label">Capacidad en ml</label>
+            <input type="number" min="750" name="capacity_ml" step="0.01" class="form-control" value="{{bottling.capacity_ml}}">
         </div>
         <div class="mb-3 fst-italic">
             <label for="bottle_quantity" class="form-label">Cantidad total</label>
