--- a/templates/layout.html
+++ b/templates/layout.html
@@ -3,7 +3,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}Mi app {% endblock %}</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"><!--diseño-->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"><!--iconos-->
 </head>
 <body class="bg-light">
     <div class="container mt-5">
@@ -12,6 +13,15 @@
                 {% for category, message in messages %}
                     <div class="alert alert-{{ category }} alert-dismissible fade show" 
                     role="alert">
+                        {% if category == "success" %}
+                            <i class="bi bi-check-circle-fill me-2"></i><!--se usa i para iconos visuales-->
+                        {% elif category == "warning" %}
+                            <i class="bi bi-exclamation-triangle-fill me-2"></i>
+                        {% elif category == "info" %}
+                            <i class="bi bi-info-circle-fill me-2"></i>
+                        {% elif category == "danger" %}
+                            <i class="bi bi-x-circle-fill me-2"></i>
+                        {% endif %}
                         {{ message }}
                         <button type="button"
                         class="btn-close" 
