--- a/templates/bottling/add_bottling.html
+++ b/templates/bottling/add_bottling.html
@@ -17,7 +17,7 @@ action="{{ url_for('bottling_bp.add_bottling') }}">
             <option value="plastico">Plastico</option>
         </select>
         <label for="capacity_ml" class="form-label">Capacidad en ml</label><br>
-        <input type="number" min="750" name="capacity_ml" placeholder="min 750 ml"  step="0.01" required>
+        <input type="number" min="750" name="capacity_ml" placeholder="min 750"  step="0.01" required>
     </div>
     <div class="mb-3 fst-italic">
         <label for="bottle_quantity" class="form-label">Cantidad total</label>
