--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,11 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="{{url_for('index') }}">Vinificación</a>
-            <div class="collapse navbar-collapse">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('variety.list_varieties') }}">Variedades</a>
@@ -17,11 +21,17 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('grape_reception.list_receptions') }}">Recepciones</a>
                     </li>
-                    <li class="nav-link">
+                    <li class="nav-item">
                         <a class="nav-link" href="{{url_for('fermentations.list_fermentations')}}">Fermentaciones</a>
                     </li>
-                    <li class="nav-link">
-                        <a class="nav-link" href="{{url_for('bottling_bp.get_bottling')}}">Embotellado</a>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('aging_bp.view_agings')}}">Crianzas</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('storage_bp.view_storages')}}">Almacenamiento</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('bottling_bp.get_bottling')}}">Embotellados</a>
                     </li>
                 </ul>
             </div>
