--- a/templates/variety/varieties.html
+++ b/templates/variety/varieties.html
@@ -5,8 +5,10 @@
 {% block body %}
 <div class="d-flex justify-content-between align-items-center mb-3">
     <h2>Variedades Registradas</h2>
+    <div class="d-flex flex-column flex-sm-row gap-2"><!-- se adapta a la pantalla-->
     <a href="{{ url_for('variety.show_add_variety') }}" class="btn btn-success">+ Nueva Variedad</a>
     <a href="{{url_for('grape_reception.list_receptions')}}" class="btn btn-success">siguiente etapa</a>
+    </div>
 </div>
 
 {% if varieties %}
