--- a/templates/storage/storage.html
+++ b/templates/storage/storage.html
@@ -4,7 +4,9 @@
 <div class="container-fluid px-4">
     <div class="row">
         <h3>Nuevo Almacenamiento</h3>
+        <div class="d-flex flex-column flex-sm-row gap-2">
         <a href="{{url_for('bottling_bp.get_bottling')}}" class="btn btn-success mb-3">Suiente etapa</a>
+        </div>
         <form action="/storage" method="POST" class="bg-white p-4 rounded shadow-sm mb-4">
             <input class="form-control mb-2" name="wine_name" placeholder="Nombre del vino" required>
 
