--- a/templates/aging/aging.html
+++ b/templates/aging/aging.html
@@ -13,7 +13,9 @@
         </form>
 
         <h4>Lista de crianzas</h4>
+        <div class="d-flex flex-column flex-sm-row gap-2"> 
         <a href="{{url_for('storage_bp.view_storages')}}" class="btn btn-success mb-3">Suiente etapa</a>
+        </div>
         <table class="table table-bordered">
             <thead>
                 <tr>
